# TelegramBot

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  bot.py  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt  settings.py  test.py  test_lessons.py  validators.py
callbacks/: main_callbacks.py
handlers/: all_announcements.py  authorization.py  common.py  create_announcement.py  main_menu.py
keyboards/: authorization.py  main.py  pagination.py
locales/ru/LC_MESSAGES/: messages.mo  messages.po
locales/uk/LC_MESSAGES/: messages.mo  messages.po
middlewares/: auth.py  locale.py
states/: authorization.py  create_announcement.py
swipe_api/: requests.py
